<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/dark_gray"
	tools:context=".views.MainActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RelativeLayout
			android:id="@+id/top_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true">

			<ImageButton
				android:id="@+id/drawer_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:layout_marginTop="4dp"
				android:layout_marginEnd="4dp"
				android:background="@android:color/transparent"
				android:padding="11dp"
				app:srcCompat="@drawable/ic_menu_black_24dp" />

			<TextView
				android:id="@+id/app_name_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="11dp"
				android:layout_marginTop="6dp"
				android:layout_marginEnd="6dp"
				android:fontFamily="@font/lato_bold"
				android:padding="9dp"
				android:text="@string/app_name"
				android:textColor="@android:color/background_light"
				android:textSize="20sp" />

			<com.gauravk.bubblenavigation.BubbleNavigationConstraintView
				android:id="@+id/top_navigation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/drawer_button"
				android:background="@android:color/transparent"
				android:padding="6dp"
				app:bnc_mode="spread">

				<com.gauravk.bubblenavigation.BubbleToggleView
					android:id="@+id/nav_trending"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:bt_active="true"
					app:bt_colorActive="@android:color/background_light"
					app:bt_colorInactive="@color/gray"
					app:bt_icon="@drawable/ic_hot_black_24dp"
					app:bt_padding="6dp"
					app:bt_shape="@drawable/transition"
					app:bt_title="@string/trending"
					app:bt_titlePadding="6dp"
					tools:layout_editor_absoluteX="6dp"
					tools:layout_editor_absoluteY="6dp" />

				<com.gauravk.bubblenavigation.BubbleToggleView
					android:id="@+id/nav_popular"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:bt_active="true"
					app:bt_colorActive="@android:color/background_light"
					app:bt_colorInactive="@color/gray"
					app:bt_icon="@drawable/ic_stars_black_24dp"
					app:bt_padding="6dp"
					app:bt_shape="@drawable/transition"
					app:bt_title="@string/popular"
					app:bt_titlePadding="6dp"
					tools:layout_editor_absoluteX="6dp"
					tools:layout_editor_absoluteY="6dp" />

				<com.gauravk.bubblenavigation.BubbleToggleView
					android:id="@+id/nav_latest"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:bt_active="true"
					app:bt_colorActive="@android:color/background_light"
					app:bt_colorInactive="@color/gray"
					app:bt_icon="@drawable/ic_new_black_24dp"
					app:bt_padding="6dp"
					app:bt_shape="@drawable/transition"
					app:bt_title="@string/latest"
					app:bt_titlePadding="6dp"
					tools:layout_editor_absoluteX="6dp"
					tools:layout_editor_absoluteY="6dp" />

				<com.gauravk.bubblenavigation.BubbleToggleView
					android:id="@+id/nav_categories"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:bt_active="true"
					app:bt_colorActive="@android:color/background_light"
					app:bt_colorInactive="@color/gray"
					app:bt_icon="@drawable/ic_categories_black_24dp"
					app:bt_padding="6dp"
					app:bt_shape="@drawable/transition"
					app:bt_title="@string/categories"
					app:bt_titlePadding="6dp"
					tools:layout_editor_absoluteX="6dp"
					tools:layout_editor_absoluteY="6dp" />



			</com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

		</RelativeLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recycler_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/top_bar"
			android:layout_marginStart="5dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="5dp"
			android:layout_marginBottom="5dp" />

		<com.google.android.gms.ads.AdView
			xmlns:ads="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/ad_view"
			ads:adSize="SMART_BANNER"
			ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
			android:layout_alignParentBottom="true" />

	</RelativeLayout>

	<com.google.android.material.navigation.NavigationView
		android:id="@+id/nav_drawer"
		android:background="@color/dark_gray"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:fitsSystemWindows="true"
		app:itemTextColor="@android:color/background_light"
		app:itemIconTint="@android:color/background_light"
		app:headerLayout="@layout/nav_header_layout"
		app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

